--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ jupyterlite-javascript-kernel==0.3.0
 # Language support (optional)
 jupyterlab-language-pack-fr-FR
 jupyterlab-language-pack-zh-CN
+jupyterlab-language-pack-es-ES
 
 # P5 kernel (optional)
 jupyterlite-p5-kernel==0.1.0
@@ -43,3 +44,5 @@ ipyleaflet
 # Python: plotting libraries (optional)
 plotly>=5,<6
 bqplot
+
+
